# analytic_pulse

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/agent/: README.md  package.json
apps/agent/src/: collect.ts  index.ts  probe.ts
apps/api/: .env.example  package.json
apps/api/src/: index.ts
apps/cli/: README.md  package.json
apps/cli/src/: config.ts  index.ts  util.ts
apps/web/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  package-lock.json  package.json
backend/scripts/: trigger-cron.mjs
backend/src/: index.ts
database/: migration_agents_v1.sql  migration_ai_rca_v1.sql  migration_alerts_v1.sql  migration_analytics_v1.sql  migration_auth_oauth.sql  migration_browser_v1.sql  migration_dns_v1.sql  migration_incidents_v1.sql  migration_map_v1.sql  migration_monitoring_v1.sql  migration_probes_v1.sql  migration_public_api_v1.sql  migration_rum_v1.sql  migration_ssl_v1.sql  migration_status_pages_v1.sql  migration_vigia_v1.sql  migration_whatsapp.sql  schema.sql
docs/: AI.md  API.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  ROADMAP.md  SDKS.md  UI_GUIDELINES.md  VISION.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  style.css
sdks/csharp/: README.md
sdks/go/: README.md  client.go  client_test.go  go.mod
sdks/java/: README.md
sdks/php/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/analytic_pulse/: __init__.py  client.py  errors.py
sdks/rust/: README.md
(+177 files in other folders)
